server/iptables.rules
*filter

# allow loopback
-A INPUT -i lo -j ACCEPT
-A INPUT ! -i lo -d 127.0.0.0/8 -j REJECT

# allow established sessions
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT

# allow ssh
-A INPUT -p tcp --dport ${PORT_NUM} -j ACCEPT

# allow web traffic
-A INPUT -p tcp --dport 80 -j ACCEPT
-A INPUT -p tcp --dport 443 -j ACCEPT

# logging
-A INPUT -m limit --limit 5/min -j LOG --log-prefix "iptables denied: " --log-level 7

-A INPUT -j REJECT
-A FORWARD -j REJECT

# info
# https://help.ubuntu.com/community/IptablesHowTo

COMMIT
